--- a/httpRouter-api/pom.xml
+++ b/httpRouter-api/pom.xml
@@ -64,6 +64,10 @@
 			<artifactId>httpRouter</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
