--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,6 @@
 			<groupId>com.github.battlesteed</groupId>
 			<artifactId>hibernateMaster</artifactId>
 			<version>1.0.13-SNAPSHOT</version>
-			<scope>compile</scope>
-			<optional>true</optional>
 		</dependency>
 		
 		<dependency>
@@ -228,5 +226,6 @@
 	<modules>
       <module>httpRouter</module>
       <module>httpRouter-api</module>
+     <!-- <module>httpRouter-test</module> -->
    </modules>
 </project>
