添加API模块junit测试;添加文档生成大致代码结构

--- a/httpRouter-api/pom.xml
+++ b/httpRouter-api/pom.xml
@@ -65,6 +65,13 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.battlesteed</groupId>
+			<artifactId>httpRouter-test</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
 		</dependency>
