--- a/httpRouter/pom.xml
+++ b/httpRouter/pom.xml
@@ -65,6 +65,13 @@
 		    <artifactId>gson</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.github.battlesteed</groupId>
+			<artifactId>httpRouter-test</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+			<optional>true</optional>
+		</dependency>
 	
 	</dependencies>
 	<build>
